--- a/design/frontend/src/main/webapp/css/style.css
+++ b/design/frontend/src/main/webapp/css/style.css
@@ -1,4 +1,4 @@
-﻿body {
+body {
 text-align: center;
 background: #a46740 url(../images/bg.jpg);
 }
@@ -19,6 +19,47 @@ display: box;
 box-pack: center;
 box-align: center;
 }
+
+#chatTextarea {
+text-align: left;
+border: 2px solid #fff;
+width: 200px;
+height: 200px;
+bottom:218px;
+right: 30px;
+background: #000;
+opacity: 0.7;
+position:absolute;
+color: #fff;
+
+
+}
+
+#chatMessage{
+bottom: 118px;
+right:30px;
+width: 250px;
+height: 100px;
+position:absolute;
+}
+
+
+#chatInput{
+text-align: left;
+border: 2px solid #000;
+width: 153px;
+background: #000;
+opacity: 0.7;
+color: #fff;
+border: 2px solid #fff;
+}
+
+#chatButton{
+top: 0px;
+right: 0px;
+position: absolute;
+}
+ 
 
 #status {
 opacity: 0.7;
